compiling_error.txt
/Users/victoria.dequehen/github/danieladev/double_linked_list.c:4:5: error: must use 'struct' tag to refer to type 'double_linked_list'
    double_linked_list* forward, backward;
    ^
    struct 
/Users/victoria.dequehen/github/danieladev/double_linked_list.c:4:34: error: field has incomplete type 'struct double_linked_list'
    double_linked_list* forward, backward;
                                 ^
/Users/victoria.dequehen/github/danieladev/double_linked_list.c:2:8: note: definition of 'struct double_linked_list' is not complete until the closing '}'
struct double_linked_list {
       ^
/Users/victoria.dequehen/github/danieladev/double_linked_list.c:9:2: error: expected ';' after struct
}
 ^
 ;
3 errors generated.
